@@ -9,7 +9,7 @@ plugins {
   id 'org.sonarqube' version '3.3'
   id 'au.com.dius.pact' version '4.2.7'
   id "io.freefair.lombok" version "5.3.3.3"
-  id "org.flywaydb.flyway" version "7.10.0"
+  id "org.flywaydb.flyway" version "7.11.1"
   id 'net.ltgt.apt' version '0.21'
 }
 
@@ -75,28 +75,29 @@ allprojects {
       dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
         entry 'guava'
       }
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.5.20'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.5.21'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '1.5.20'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.5.20'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.5.21'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.5.20'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.5.20'
       // CVE-2020-29582
 
       // CVE-2021-29425
-      dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
+      dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
     }
   }
 
+  configurations {
+    testCompile.exclude group: 'ch.qos.logback', module: 'logback-classic'
+  }
+
   repositories {
     mavenLocal()
     jcenter()
     mavenCentral()
-    maven {
-      url "https://dl.bintray.com/hmcts/hmcts-maven"
-    }
     maven {
       url  "http://repo.spring.io/milestone"
     }
@@ -164,6 +165,12 @@ task contract(type: Test) {
 
 task pullTestAsset(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine './bin/pull-latest-release-asset.sh', 'civil-ccd-definition', 'civil-e2e.zip'
+}
+
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
@@ -278,7 +285,7 @@ dependencies {
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.22'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
 
   implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.20.1'
   implementation group: 'org.jdbi', name: 'jdbi3-spring4', version: '3.19.0'
@@ -287,7 +294,7 @@ dependencies {
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.9.RELEASE'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
 
@@ -306,7 +313,7 @@ dependencies {
   compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
-  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.0.2'
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.0.3'
 
   implementation group: 'org.springframework.security', name: 'spring-security-web'
   implementation group: 'org.springframework.security', name: 'spring-security-config'
@@ -314,31 +321,31 @@ dependencies {
   implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.7'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
-  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.10.1'
+  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.11'
   implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
 
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.7'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.50'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.8'
 
-  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.2'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.3'
 
-  implementation group: 'com.networknt', name: 'json-schema-validator', version: '1.0.55'
+  implementation group: 'com.networknt', name: 'json-schema-validator', version: '1.0.57'
 
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.15.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.4'
   implementation group: 'org.camunda.bpm', name: 'camunda-engine-rest-core', version: '7.14.0'
-  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.12.3'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.12.4'
 
   // JAX-B dependencies for JDK 9+
   implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
   implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '3.0.1'
   implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.0'
 
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.5.1'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.6.1'
 
   testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
@@ -353,7 +360,7 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
 
   testCompile group: 'org.springframework.statemachine', name: 'spring-statemachine-test', version: versions.springStatemachine
-
+  testCompile 'com.github.hmcts:fortify-client:1.0.1:all'
   //pact contract testing
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: versions.pact
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: versions.pact
